Added edit capabilities.
